--- a/.github/workflows/stream_processing.yml
+++ b/.github/workflows/stream_processing.yml
@@ -3,9 +3,9 @@ name: Stream Processing Pipeline
 on:
   push:
     paths:
-      - 'data/**'  # Watches the "data" directory for new file commits
+      - 'data/**'
     branches:
-      - main  # Trigger only on the main branch
+      - main
 
 jobs:
   notify-kafka:
@@ -22,10 +22,18 @@ jobs:
           echo "export PATH=/opt/kafka/bin:$PATH" >> ~/.bashrc
           source ~/.bashrc
 
+      - name: Debug File Detection
+        run: |
+          echo "GitHub SHA: ${{ github.sha }}"
+          echo "Changed files:"
+          git diff-tree --no-commit-id --name-only -r ${{ github.sha }}
+
       - name: Send File Info to Kafka
         run: |
-          FILE_PATH=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep '^data/')
-          if [ -n "$FILE_PATH" ]; then
+          FILE_PATH=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep '^data/' || true)
+          if [ ! -z "$FILE_PATH" ]; then
             echo "New file detected: $FILE_PATH"
             echo "{\"filename\": \"$FILE_PATH\", \"repo\": \"${{ github.repository }}\"}" | /opt/kafka/bin/kafka-console-producer.sh --broker-list ${{ secrets.KAFKA_BROKER }} --topic file-events
+          else
+            echo "No new files detected in the data/ directory."
           fi
